--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lazy-load-image-component": "^1.6.3",
-    "react-router-dom": "^7.1.2"
+    "react-router-dom": "^7.1.2",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
